# PortaServer

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/fossylabs/portaserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/fossylabs/portaserver/: AppDestinations.kt  MainActivity.kt
app/src/main/java/com/fossylabs/portaserver/llm/: DeviceSpecsReader.kt  LlamaWrapper.kt  LlmApiHandler.kt  LlmInferenceEngine.kt  LlmModels.kt  ModelCacheManager.kt  ModelDownloadManager.kt  ModelRecommender.kt  ModelRepository.kt
app/src/main/java/com/fossylabs/portaserver/notification/: DownloadNotifier.kt
app/src/main/java/com/fossylabs/portaserver/server/: InactivityWatcher.kt  KtorServer.kt  LogRepository.kt  ServerManager.kt
app/src/main/java/com/fossylabs/portaserver/service/: ServerForegroundService.kt
app/src/main/java/com/fossylabs/portaserver/settings/: SettingsRepository.kt
app/src/main/java/com/fossylabs/portaserver/sql/: SqlApiHandler.kt  SqliteManager.kt
app/src/main/java/com/fossylabs/portaserver/ui/components/: ConsoleLogBottomSheet.kt
app/src/main/java/com/fossylabs/portaserver/ui/navigation/: AppNavGraph.kt
app/src/main/java/com/fossylabs/portaserver/util/: HashUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/fossylabs/portaserver/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
